--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,40 +9,119 @@
     <!-- google font starts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter+Tight:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter+Tight:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
     <!-- google font ends -->
     <!-- fontawesome starts here  -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+        integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- fontawesome ends here  -->
 
 
 </head>
-<body>
-    <header>
-        <div class="container">
 
-        <div>
-            <img src="./assets/logo.webp" alt="">
-        </div>
-        <div class="navigation">
-            <nav>
-                <ul>
-                    <a href="#hero"> <li> Home </li> </a>
-                    <a href="#about"> <li> About </li> </a>
-                    <a href="#projects"> <li> Projects </li> </a>
-                    <a href="#blogs"> <li> Blogs </li> </a>
-                    <a href="#clients"> <li> Clients </li> </a>
-                    <a href="#contact"> <li> Contact</li> </a>
-                </ul>
-                <div class="social">
-                    <i class="fa-brands fa-facebook-f"></i>
-                    <i class="fa-brands fa-x-twitter"></i>
-                    <i class="fa-brands fa-square-instagram"></i>
-                    <i class="fa-brands fa-pinterest"></i>
+<body>
+    <!-- header starts here  -->
+    <div class="first">
+
+
+        <div class="hero">
+            <div class="container">
+                <div class="row">
+                    <header id="header">
+                        <!-- <div class="container"> -->
+                            <div>
+                                <img src="./assets/logo.webp" alt="">
+                            </div>
+                            <div class="navigation">
+                                <nav>
+                                    <ul>
+                                        <a href="#hero">
+                                            <li> Home </li>
+                                        </a>
+                                        <a href="#about">
+                                            <li> About </li>
+                                        </a>
+                                        <a href="#projects">
+                                            <li> Projects </li>
+                                        </a>
+                                        <a href="#blogs">
+                                            <li> Blogs </li>
+                                        </a>
+                                        <a href="#clients">
+                                            <li> Clients </li>
+                                        </a>
+                                        <a href="#contact">
+                                            <li> Contact</li>
+                                        </a>
+                                    </ul>
+                                    <div class="social">
+                                        <i class="fa-brands fa-facebook-f"></i>
+                                        <i class="fa-brands fa-x-twitter"></i>
+                                        <i class="fa-brands fa-square-instagram"></i>
+                                        <i class="fa-brands fa-pinterest"></i>
+                                    </div>
+                                </nav>
+                            </div>
+                        <!-- </div> -->
+                    </header>
+
                 </div>
-            </nav>
+                <div class="row spacer">
+
+                </div>
+                <div class="row">
+                    <div class="column">
+                        <h1>Get ready for the game of your life!</h1>
+                        <p>This championship is going to be broadcast on national TV! Stay tuned to watch the
+                            unforgettable battle of the champions.</p>
+                        <button class="btn-primary">More Information</button>
+                    </div>
+                    <div class="column">
+
+                    </div>
+                </div>
+            </div>
+
         </div>
+    </div>
+
+    <!-- header ends here  -->
+    <!-- hero starts here  -->
+
+    <!-- hero ends here  -->
+    <!-- eventUpdate starts here  -->
+    <div class="eventUpdate">
+        <div class="container">
+            <div class="row events" id="events">
+                <!-- <div class="column">
+                    <img src="./assets/logo.webp" alt="">
+                    <div class="details">
+                        <p>this is </p>
+                        <p class="score">120-101</p>
+                        <p>this is </p>
+                        <p>this is </p>
+                    </div>
+                    <img src="./assets/logo.webp" alt="">
+                </div> -->
+            </div>
         </div>
-    </header>
+
+    </div>
+    <!-- eventUpdate ends here  -->
+    <!-- blog starts here  -->
+     <div class="blog">
+        <div class="container">
+            <div class="row">
+                <h2>Hottest blog stories</h2>
+            </div>
+            <div class="row" id="blog">
+            </div>
+        </div>
+     </div>
+    <!-- blog ends here  -->
+    <script src="./script.js"></script>
 </body>
+
 </html>
