--- a/index.html
+++ b/index.html
@@ -121,6 +121,17 @@
         </div>
      </div>
     <!-- blog ends here  -->
+    <!-- news starts here  -->
+    <div class="news">
+        <div class="container">
+            <div class="row">
+                <h2>Hottest news stories</h2>
+            </div>
+            <div class="row" id="news">
+            </div>
+        </div>
+    </div>
+    <!-- news ends here  -->
     <script src="./script.js"></script>
 </body>
 
